[package]
name = "fs-flows"
description = "I/O-free library to manage file systems"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["api-bindings"]
keywords = ["io-free", "flow", "fs", "file", "directory"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/fs-flows/latest/fs_flows"
repository = "https://github.com/pimalaya/fs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["std"]
std = []
tokio = ["dep:tokio"]

[dev-dependencies]
env_logger = "0.11"
tempdir = "0.3"
tokio = { version = "1", features = ["full"] }

[dependencies]
log = "0.4"
tokio = { version = "1", default-features = false, features = ["fs"], optional = true }
